[package]
name = "shlog"
version = "0.1.1"
authors = ["Triet Trinh <contact@trinhminhtriet.com>"]
license = "MIT"
edition = "2018"
repository = "https://github.com/trinhminhtriet/shlog"
documentation = "https://trinhminhtriet.com"
description = "Shlog: A lightweight shell logging tool for tracking and managing command history with easy integration and analysis."
readme = "README.md"
keywords = ["shell", "command", "security", "history", "terminal"]
categories = ["command-line-utilities"]

[dependencies]
regex = "1.11"
structopt = "0.3"
dirs = "5.0"

[profile.release]
lto = true
